Practice_challanges/Modules/ModuleExample3/sg/sg.tf
# 6 Create Security Group to allow port 22, 80, 443 
resource "aws_security_group" "terraform_project1_SG" {
  name        = "Terraform_Project_1_SG"
  description = "This is SG for the Terrafomr Project1"
  vpc_id      = aws_vpc.terraform_project1_vpc.id

  ingress {
    description = "https from VPC"
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "http from VPC"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    description = "https from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_web_terraform"
  }
}
